[project]
name = "3-way-handshake-with-more-pins"
version = "0.1.0"
description = ""
authors = [
    {name = "Päpke, Tim Carlo",email = "tim.paepke@stud.tu-darmstadt.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.135.26"

